--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^7.0.1",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.7.9",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
